# My_Agent

./: .gitignore  CMakeLists.txt  README.md
config/: agent.yaml
docs/: acp-integration.md  agent-loop.md  agent-session-flow.mmd  architecture.md  configuration.md  getting-started.md  modules.md  session-and-tui.md  session-persistence.md  session-persistence.mmd  troubleshooting.md  tui-integration-changes.md
docs/superpowers/plans/: 2026-07-21-command-policy-integration.md  2026-07-21-developer-documentation.md
docs/superpowers/specs/: 2026-07-21-command-policy-integration-design.md  2026-07-21-developer-documentation-design.md  2026-07-22-tui-slash-command-registry-design.md  2026-07-22-tui-slash-suggest-design.md
include/: model_client.hpp
include/acp/: acp_server.hpp  json_rpc.hpp  prompt_controller.hpp  session_registry.hpp
include/agent/: agent_event.hpp  agent_loop.hpp  agent_run_result.hpp  agent_session.hpp  assistant_text.hpp  cancellation.hpp  command_authorization.hpp  command_policy.hpp  history.hpp  process_result.hpp  session_manager.hpp  session_paths.hpp  session_store.hpp  shell.hpp  sqlite_session_store.hpp
include/app_cli/: acp_cli.hpp  cli.hpp  command_review.hpp
include/config/: agent_loader.hpp  dotenv_loader.hpp
include/http/: http_client.hpp
include/model/: message.hpp  model.hpp  model_client.hpp  openai_format.hpp
include/tui/: log_block.hpp  log_viewport.hpp  prompt_history.hpp  run_status.hpp  session_command.hpp  slash_command.hpp  slash_context.hpp  slash_registry.hpp  slash_suggest.hpp  slash_types.hpp  tui.hpp  tui_session.hpp  tui_state.hpp  tui_view.hpp
scripts/: rebuild_install.sh
src/: acp_cli.cpp  acp_json_rpc.cpp  acp_main.cpp  acp_prompt_controller.cpp  acp_server.cpp  acp_session_registry.cpp  agent_loader.cpp  agent_session.cpp  cli.cpp  command_authorization.cpp  command_policy.cpp  command_review.cpp  dotenv_loader.cpp  http_client.cpp  log_block.cpp  log_viewport.cpp  main.cpp  model_client.cpp  process_result.cpp  prompt_history.cpp  run_status.cpp  session_command.cpp  session_manager.cpp  session_paths.cpp  shell.cpp  slash_builtins.cpp  slash_context.cpp  slash_registry.cpp  slash_suggest.cpp  sqlite_session_store.cpp  tui.cpp  tui_session.cpp  tui_state.cpp  tui_view.cpp
tests/: CMakeLists.txt  test_acp_json_rpc.cpp  test_acp_server.cpp  test_agent_loop.cpp  test_agent_session.cpp  test_cli.cpp  test_command_authorization.cpp  test_command_policy.cpp  test_command_review.cpp  test_config.cpp  test_http.cpp  test_log_block.cpp  test_log_viewport.cpp  test_model.cpp  test_prompt_history.cpp  test_run_status.cpp  test_session_command.cpp  test_session_manager.cpp  test_session_store.cpp  test_shell.cpp  test_slash_registry.cpp  test_slash_suggest.cpp  test_tui_session.cpp  test_tui_state.cpp  test_tui_view.cpp
